# OpenGL-image-processing

./: CMakeLists.txt  eventfilter.cpp  eventfilter.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  resources.qrc  section.cpp  section.h  shadermanager.cpp  shadermanager.h  shaderparameters.cpp  shaderparameters.h
shaders/: base.frag  base.vert  correction.frag  correction.vert  crt.frag  pixelate.frag  posterize.frag  sharpness.frag  sharpness.vert
